<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".accountsettings.AccountSettingsActivity">
    <!--Logo-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="10dp"
        android:background="@drawable/logo"
        android:contentDescription="@string/logo_description"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.10"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintWidth_percent="0.5" />

    <!--Main Holder-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/account_main_container"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginVertical="20dp"
        android:background="@color/transparent_blue"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/holder_bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <TextView
            android:id="@+id/txt_account_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/account_settings"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_account_settings"
            android:layout_width="109dp"
            android:layout_height="117dp"
            android:adjustViewBounds="true"
            android:contentDescription="@string/account_settings_description"
            android:scaleType="fitCenter"
            android:src="@drawable/account_settings"
            app:layout_constraintBottom_toTopOf="@id/holder_fav_table"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_account_settings"
            app:layout_constraintVertical_chainStyle="spread" />

        <!--Fav Table-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/holder_fav_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@id/holder_fav_meal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/img_account_settings">

            <TextView
                android:id="@+id/txt_fav_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourite_table"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/spn_fav_table"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spn_fav_table"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="48dp"
                android:minWidth="80dp"
                android:background="@color/grey"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_fav_table"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Fav Meal-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/holder_fav_meal"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/holder_btns"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/holder_fav_table">

            <TextView
                android:id="@+id/txt_fav_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/favourite_meal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/spn_fav_meal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                android:id="@+id/spn_fav_meal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/grey"
                android:minWidth="80dp"
                android:minHeight="48dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/txt_fav_meal"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <!--Button Holder-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/holder_btns"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!--Delete Account Button-->
            <Button
                android:id="@+id/btn_delete_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_red"
                android:paddingVertical="10dp"
                android:text="@string/delete_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/btn_sign_out"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="320dp" />

            <!--Sign Out Button-->
            <Button
                android:id="@+id/btn_sign_out"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@drawable/button_red"
                android:paddingVertical="10dp"
                android:text="@string/sign_out"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintWidth_percent="0.6"
                app:layout_constraintStart_toEndOf="@id/btn_delete_account"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="320dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/holder_bottom_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent_blue"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/account_main_container">

        <!--Home image button (goes to home page)-->
        <ImageButton
            android:id="@+id/btn_home"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:contentDescription="@string/home_description"
            android:scaleType="fitCenter"
            android:src="@drawable/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Home button label-->
        <TextView
            android:id="@+id/txt_home"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:text="@string/home"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_home"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>