<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".MainActivity"
    android:id="@+id/main_container">

    <!--Logo-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:adjustViewBounds="true"
        android:background="@null"
        android:scaleType="fitCenter"
        android:src="@drawable/logo"
        app:layout_constraintDimensionRatio="W,1:1"
        android:contentDescription="@string/logo_description"
        app:layout_constraintBottom_toTopOf="@+id/holder_btn_book_table"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread"
        app:layout_constraintWidth_percent="0.5" />

    <!--Holder For Book Table Button-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/holder_btn_book_table"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent_blue"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/holder_btn_my_reservations"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo">

        <!--Book Table Button (goes to book table page)-->
        <Button
            android:id="@+id/btn_book_table"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            android:background="@drawable/button_orange"
            android:paddingVertical="20dp"
            android:text="@string/book_table"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Holder for My Reservation Button-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/holder_btn_my_reservations"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent_blue"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/holder_btn_menu"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holder_btn_book_table">

        <!--My Reservations Button (goes to my reservations page)-->
        <Button
            android:id="@+id/btn_my_reservations"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintWidth_max="320dp"
            android:background="@drawable/button_orange"
            android:paddingVertical="20dp"
            android:text="@string/my_reservations"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Holder for Menu Button-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/holder_btn_menu"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent_blue"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/holder_btn_reviews"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holder_btn_my_reservations">

        <!--Reviews Button (goes to reviews page)-->
        <Button
            android:id="@+id/btn_menu"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_orange"
            android:paddingVertical="20dp"
            android:text="@string/menu"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="320dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Holder for Reviews Button-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/holder_btn_reviews"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent_blue"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@id/holder_bottom_bar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holder_btn_menu">

        <!--Reviews Button (goes to reviews page)-->
        <Button
            android:id="@+id/btn_reviews"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_orange"
            android:paddingVertical="20dp"
            android:text="@string/reviews"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="320dp"
            tools:layout_editor_absoluteX="33dp"
            tools:layout_editor_absoluteY="431dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


    <!--Bottom Bar-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/holder_bottom_bar"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@color/transparent_blue"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent">

        <!--Account Settings Image Button (goes to account settings page)-->
        <ImageButton
            android:id="@+id/btn_account_settings"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/account_settings"
            android:contentDescription="@string/account_settings_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toStartOf="@+id/btn_find_us"
            app:layout_constraintHorizontal_chainStyle="spread_inside"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Current User Label-->
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:text=""
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_account_settings"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Find Us Image Button (goes to find us page)-->
        <ImageButton
            android:id="@+id/btn_find_us"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:adjustViewBounds="true"
            android:background="@null"
            android:scaleType="fitCenter"
            android:src="@drawable/find_us"
            android:contentDescription="@string/find_us_description"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/btn_account_settings"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Find Us Label-->
        <TextView
            android:id="@+id/find_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="0dp"
            android:text="@string/find_us"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_find_us"
            app:layout_constraintTop_toTopOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

