<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".MainActivity">

    <!--Logo-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="50dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/logo_description"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintWidth_percent="0.5" />

    <!--Main Holder-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/holder_btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent_blue"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_bias="0.2"
        app:layout_constraintVertical_chainStyle="packed">

        <!--Page Title-->
        <TextView
            android:id="@+id/txt_create_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="30sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--Name Input-->
        <EditText
            android:id="@+id/edit_txt_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:autofillHints="name"
            android:background="@color/white"
            android:hint="@string/hint_username"
            android:inputType="textPersonName"
            android:minWidth="200dp"
            android:minHeight="50dp"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/edit_txt_phone_number"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txt_create_account"
            app:layout_constraintVertical_bias="1.0"
            app:layout_constraintWidth_max="488dp" />

        <!--Email Input-->
        <EditText
            android:id="@+id/edit_txt_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:autofillHints="phone"
            android:background="@color/white"
            android:hint="@string/hint_phone_number"
            android:inputType="phone|number"
            android:minWidth="200dp"
            android:minHeight="50dp"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@+id/holder_btns"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_txt_name"
            app:layout_constraintWidth_max="488dp" />

        <!--Button Holder-->
        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/holder_btns"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <!--Login Button (goes to login page)-->
            <Button
                android:id="@+id/btn_login"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:background="@drawable/button_orange"
                android:paddingVertical="20dp"
                android:text="@string/login"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/btn_create_account"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="320dp"
                app:layout_constraintWidth_percent="0.4" />

            <!--Create Account Button (creates users account and logs them in)-->
            <Button
                android:id="@+id/btn_create_account"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@drawable/button_orange"
                android:paddingVertical="20dp"
                android:text="@string/create_account"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/btn_login"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintWidth_max="320dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>