<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_image"
    tools:context=".MainActivity">


    <!--Logo-->
    <ImageView
        android:id="@+id/logo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="50dp"
        android:contentDescription="@string/logo_description"
        android:background="@drawable/logo"
        app:layout_constraintDimensionRatio="W,1:1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside"
        app:layout_constraintWidth_percent="0.5" />

    <!--Holder for login button-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/holder_btn_login"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent_blue"
        android:padding="10dp"
        android:layout_marginBottom="30dp"
        app:layout_constraintBottom_toTopOf="@+id/holder_btn_create_account"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintVertical_chainStyle="packed">

        <!--Login button (goes to login page)-->
        <Button
            android:id="@+id/btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_orange"
            android:paddingVertical="20dp"
            android:text="@string/login"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="320dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--Holder for create accounts button-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/holder_btn_create_account"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/transparent_blue"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/holder_btn_login">

        <!--Create accounts button (goes to create account page)-->
        <Button
            android:id="@+id/btn_create_account"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@drawable/button_orange"
            android:paddingVertical="20dp"
            android:text="@string/create_account"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintWidth_max="320dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.constraintlayout.widget.ConstraintLayout>

